libqt6c/src/libqthreadpool.hpp

#pragma once
#ifndef SRCC_LIBQTHREADPOOL_HPP
#define SRCC_LIBQTHREADPOOL_HPP

#include <stdbool.h>
#include <stddef.h>

#pragma GCC diagnostic ignored "-Wdeprecated-declarations"

#include "qtlibc.h"

#ifdef __cplusplus
extern "C" {
#endif

#ifdef __cplusplus
#else
typedef struct QChildEvent QChildEvent;
typedef struct QEvent QEvent;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QObject QObject;
typedef struct QRunnable QRunnable;
typedef struct QThread QThread;
typedef struct QThreadPool QThreadPool;
typedef struct QTimerEvent QTimerEvent;
#endif

QThreadPool* QThreadPool_new();
QThreadPool* QThreadPool_new2(QObject* parent);
QMetaObject* QThreadPool_MetaObject(const QThreadPool* self);
void* QThreadPool_Metacast(QThreadPool* self, const char* param1);
int QThreadPool_Metacall(QThreadPool* self, int param1, int param2, void** param3);
QThreadPool* QThreadPool_GlobalInstance();
void QThreadPool_Start(QThreadPool* self, QRunnable* runnable);
bool QThreadPool_TryStart(QThreadPool* self, QRunnable* runnable);
void QThreadPool_Start2(QThreadPool* self, intptr_t functionToRun);
bool QThreadPool_TryStart2(QThreadPool* self, intptr_t functionToRun);
void QThreadPool_StartOnReservedThread(QThreadPool* self, QRunnable* runnable);
void QThreadPool_StartOnReservedThread2(QThreadPool* self, intptr_t functionToRun);
int QThreadPool_ExpiryTimeout(const QThreadPool* self);
void QThreadPool_SetExpiryTimeout(QThreadPool* self, int expiryTimeout);
int QThreadPool_MaxThreadCount(const QThreadPool* self);
void QThreadPool_SetMaxThreadCount(QThreadPool* self, int maxThreadCount);
int QThreadPool_ActiveThreadCount(const QThreadPool* self);
void QThreadPool_SetStackSize(QThreadPool* self, unsigned int stackSize);
unsigned int QThreadPool_StackSize(const QThreadPool* self);
void QThreadPool_SetThreadPriority(QThreadPool* self, int priority);
int QThreadPool_ThreadPriority(const QThreadPool* self);
void QThreadPool_ReserveThread(QThreadPool* self);
void QThreadPool_ReleaseThread(QThreadPool* self);
bool QThreadPool_WaitForDone(QThreadPool* self);
void QThreadPool_Clear(QThreadPool* self);
bool QThreadPool_Contains(const QThreadPool* self, const QThread* thread);
bool QThreadPool_TryTake(QThreadPool* self, QRunnable* runnable);
void QThreadPool_Start22(QThreadPool* self, QRunnable* runnable, int priority);
void QThreadPool_Start23(QThreadPool* self, intptr_t functionToRun, int priority);
bool QThreadPool_WaitForDone1(QThreadPool* self, int msecs);
void QThreadPool_OnMetaObject(const QThreadPool* self, intptr_t slot);
QMetaObject* QThreadPool_SuperMetaObject(const QThreadPool* self);
void QThreadPool_OnMetacast(QThreadPool* self, intptr_t slot);
void* QThreadPool_SuperMetacast(QThreadPool* self, const char* param1);
void QThreadPool_OnMetacall(QThreadPool* self, intptr_t slot);
int QThreadPool_SuperMetacall(QThreadPool* self, int param1, int param2, void** param3);
bool QThreadPool_Event(QThreadPool* self, QEvent* event);
void QThreadPool_OnEvent(QThreadPool* self, intptr_t slot);
bool QThreadPool_SuperEvent(QThreadPool* self, QEvent* event);
bool QThreadPool_EventFilter(QThreadPool* self, QObject* watched, QEvent* event);
void QThreadPool_OnEventFilter(QThreadPool* self, intptr_t slot);
bool QThreadPool_SuperEventFilter(QThreadPool* self, QObject* watched, QEvent* event);
void QThreadPool_TimerEvent(QThreadPool* self, QTimerEvent* event);
void QThreadPool_OnTimerEvent(QThreadPool* self, intptr_t slot);
void QThreadPool_SuperTimerEvent(QThreadPool* self, QTimerEvent* event);
void QThreadPool_ChildEvent(QThreadPool* self, QChildEvent* event);
void QThreadPool_OnChildEvent(QThreadPool* self, intptr_t slot);
void QThreadPool_SuperChildEvent(QThreadPool* self, QChildEvent* event);
void QThreadPool_CustomEvent(QThreadPool* self, QEvent* event);
void QThreadPool_OnCustomEvent(QThreadPool* self, intptr_t slot);
void QThreadPool_SuperCustomEvent(QThreadPool* self, QEvent* event);
void QThreadPool_ConnectNotify(QThreadPool* self, const QMetaMethod* signal);
void QThreadPool_OnConnectNotify(QThreadPool* self, intptr_t slot);
void QThreadPool_SuperConnectNotify(QThreadPool* self, const QMetaMethod* signal);
void QThreadPool_DisconnectNotify(QThreadPool* self, const QMetaMethod* signal);
void QThreadPool_OnDisconnectNotify(QThreadPool* self, intptr_t slot);
void QThreadPool_SuperDisconnectNotify(QThreadPool* self, const QMetaMethod* signal);
QObject* QThreadPool_Sender(const QThreadPool* self);
void QThreadPool_OnSender(const QThreadPool* self, intptr_t slot);
QObject* QThreadPool_SuperSender(const QThreadPool* self);
int QThreadPool_SenderSignalIndex(const QThreadPool* self);
void QThreadPool_OnSenderSignalIndex(const QThreadPool* self, intptr_t slot);
int QThreadPool_SuperSenderSignalIndex(const QThreadPool* self);
int QThreadPool_Receivers(const QThreadPool* self, const char* signal);
void QThreadPool_OnReceivers(const QThreadPool* self, intptr_t slot);
int QThreadPool_SuperReceivers(const QThreadPool* self, const char* signal);
bool QThreadPool_IsSignalConnected(const QThreadPool* self, const QMetaMethod* signal);
void QThreadPool_OnIsSignalConnected(const QThreadPool* self, intptr_t slot);
bool QThreadPool_SuperIsSignalConnected(const QThreadPool* self, const QMetaMethod* signal);
void QThreadPool_Delete(QThreadPool* self);

#ifdef __cplusplus
} /* extern C */
#endif

#endif